# PostgreSQL-Specialization

./: README.md
01-db-design-and-basic-sql/: README.md
01-db-design-and-basic-sql/assignments/: README.md
01-db-design-and-basic-sql/assignments/data/: section.csv
01-db-design-and-basic-sql/lecture-notes/: README.md  crud.md  data-types.md  key-and-index.md  relational-database-design.md
02-intermediate-sql/: README.md
02-intermediate-sql/assignments/: README.md
02-intermediate-sql/assignments/scripts/: auto-updated-at.sql  generate-text.sql
02-intermediate-sql/lecture-notes/: README.md  beyond-crud.md  regex.md  text.md
02-intermediate-sql/lecture-notes/references/: create-text-table.sql  greedy_and_non_greedy_match.py  load-then-execute.sql  load.sql  regex-findall.sql
03-json-and-nlp-in-pgsql/: README.md
03-json-and-nlp-in-pgsql/assignments/: README.md
03-json-and-nlp-in-pgsql/assignments/scripts/: create-debug-table.sql
03-json-and-nlp-in-pgsql/assignments/scripts/inverted-index/: inverted-index-v0.sql  (+3 more)
03-json-and-nlp-in-pgsql/lecture-notes/: README.md  inverted-index.md  json.md
03-json-and-nlp-in-pgsql/lecture-notes/references/json/workspace/: .env  README.md  compose.yaml  index-poké.py  index-swapi.py  introduction-to-jsonb.py  pyproject.toml  secrets.py  serialization-and-deserialization.py
03-json-and-nlp-in-pgsql/lecture-notes/references/json/workspace/utils/: itunes_converter.py
04-db-architecture-and-nosql-in-es/: README.md
04-db-architecture-and-nosql-in-es/lecture-notes/: README.md  database-architecture.md  elasticsearch.md
(+22 files in other folders)
